<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:layout_marginRight="5dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/r_bg">
        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/bill_all"/>

        <RadioButton
            android:id="@+id/rb_tran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/bill_tran"/>
        <RadioButton
            android:id="@+id/rb_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/bill_top"/>

        <RadioButton
            android:id="@+id/rb_wit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/bill_wit"/>
        <RadioButton
            android:id="@+id/rb_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/bill_pay"/>
    </RadioGroup>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:src="@mipmap/arr_r"/>
</FrameLayout>