<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.1"
        android:background="@color/tv_color" />

    <LinearLayout style="@style/ll_h">

        <TextView
            style="@style/tv_name"
            android:text="@string/n_name" />

        <EditText
            android:id="@+id/name"
            style="@style/et_number"
            android:hint="key in Account number" />
    </LinearLayout>

    <View style="@style/v_w" />
    <Button
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:background="@color/transparent"
        android:layout_marginRight="@dimen/dp_20"
        android:textColor="@color/app_bg"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_16"
        android:text="@string/tran_contact"/>
    <Button
        android:id="@+id/next"
        style="@style/btn_next"
        android:background="@color/app_bg"
        android:text="@string/next" />
</LinearLayout>