<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.1"
        android:background="@color/tv_color" />

    <LinearLayout
        android:id="@+id/ll_select"
        style="@style/ll_h">

        <TextView
            style="@style/tv_name"
            android:layout_width="wrap_content"
            android:text="@string/e_payment" />

        <TextView
            android:id="@+id/tv_ibd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:textSize="@dimen/sp_12" />

        <ImageView
            style="@style/iv_32"
            android:padding="@dimen/dp_7"
            android:src="@mipmap/arrows_b_r" />
    </LinearLayout>

    <View style="@style/v_w" />

    <TextView
        style="@style/tv_name"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:text="@string/amount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_72"
        android:background="@color/white"
        android:gravity="center">
        <EditText
            android:id="@+id/amount"
            style="@style/et_radix"
            android:textSize="@dimen/sp_28"
            android:hint="RM 20.00 and above"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View style="@style/v_w" />

    <Button
        android:id="@+id/next"
        style="@style/btn_next"
        android:background="@drawable/v_bg"
        android:text="@string/next" />
</LinearLayout>